# sdg4-inequity

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py
data/public/: coverage.csv  inequity_index.csv  inequity_index.parquet  inequity_index_latest.csv
docs/: coverage_by_country_year.csv  indicators.csv
pipelines/: build_index.py  check_coverage.py  config.py  export_for_tableau.py  harmonize.py  ingest_worldbank.py  scratch.py  tidy_unesco.py
